# pgn_parser

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml  test.py
src/: lib.rs
tests/: pgn_parsing_test.py
tests/pgn_files/: Tal_Botvinnik.pgn
tests/unit/: pgn_parsing_test.py
