[project]
name = "png_parser"
version = "0.1.0"
description = "A Python library for parsing png files."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
homepage = "https://github.com/yourusername/jbig2-parser"  # Add this line
repository = "https://github.com/yourusername/jbig2-parser"  # Add this line
keywords = ["png", "chees", "python-bindings", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
