[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project.urls]

homepage = "https://github.com/MichailTal/pgn_parser"
repository = "https://github.com/MichailTal/pgn_parser"

[project]
name = "pgn_parser"
version = "0.1.1"
description = "A Python library for parsing pgn files and extracting information."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Koehler, Nils", email = "nils.koehler1@gmx.net" }
]

keywords = ["pgn", "chess", "python-bindings", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"

[tool.maturin]
bindings = "pyo3"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
